lots of changes

--- a/root/css/base.css
+++ b/root/css/base.css
@@ -1,18 +1,20 @@
-
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 @import url("basic-grid.css");
+@import url("sections.css");
 
+/* Welcome to deh body! */
 body {
     background: linear-gradient(-45deg, #ee7752, #511c63, #165a72, #23d5ab);
     background-size: 400% 400%;
 	animation: gradient 30s ease infinite;
 	height: 100vh;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-family: 'Inter', 'Lato';
     z-index: 2;
     margin: 0px;
 }
+
 @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
@@ -27,18 +29,17 @@ body {
 a:link { 
     text-decoration-line: none;
     text-decoration-style: underline overline;
-    text-decoration-color: #33a51c;
-    color: rgba(255, 105, 180, 0); }
+    text-decoration-color: #33a51c; }
 
 
 a:visited { text-decoration: none; }
 
 
 a:hover { 
-    text-decoration-line: underline;
+    color: rgba(255, 105, 180, 0);
+ }
+
+
+a:active { text-decoration-line: underline;
     text-decoration-style: wavy;
-    text-decoration-color: #33a51c4e;
-    color: rgba(255, 105, 180, 0); }
-
-
-a:active { text-decoration: none; }
+    text-decoration-color: #33a51c4e; }
