--- a/root/css/base.css
+++ b/root/css/base.css
@@ -9,6 +9,7 @@ body {
     background-size: 400% 400%;
 	animation: gradient 30s ease infinite;
 	height: 100vh;
+    max-height: 100vh;
     color: rgb(255, 255, 255);
     font-family: 'Inter', 'Lato';
     z-index: 2;
